# hartland

./: .gitignore  README.md  justfile  modeler.toml
agents/: README.md  hartland.yaml
agents/tests/: shems.test.mjs
data/: README.md  dr-snapshots.md
data/catalog/: coverage_lint.py  cz.sql  generate.py  integrity_check.sql  mirror-map.csv  pyproject.toml  taxonomy.yaml  us.sql  value-labels.json
data/catalog/tests/: test_bilingual.py  test_determinism.py  test_invariants.py  test_mirror.py
data/catalog/tests/fixtures/: item_sample.csv
data/localize-cz/: 00-widen-money-columns.sql  01-geography.sql  02-czk-fx.sql  03-reasons.sql  fx.conf  geo-map.csv
data/recon/: R0.md  README.md  cluster-seed-sanity-20260718.md  dump-manifest.md
data/seed/: naming-us.sql  reason-placeholders-fix.sql
design/: 08-czech-mirror-and-catalog-delta.md  README.md  demo-quirks.md  demo-transcript.md  hartland-demo-overview.html  hartland-demo-overview.md  plan-demo-build.md  test-fixture-hartland-replan.md
design/tasks/: p3-completeness-inventory.md  p3-completeness-matrix.md  tasks-p1-overview.md  tasks-p1-s1-catalog-generator.md  tasks-p1-s2-us-catalog.md  tasks-p1-s3-cz-bringup.md  tasks-p1-s4-cz-catalog-lexicon.md  tasks-p1-s5-cz-seed.md  tasks-p1-s6-dumps-baseline.md  tasks-p2-overview.md  tasks-p2-s1-repo-db.md  tasks-p2-s2-er.md  tasks-p2-s3-md-dims.md  tasks-p2-s4-md-cubelets.md  tasks-p2-s5-lexicon.md  tasks-p2-s6-queries-shems.md  tasks-p3-overview.md  tasks-p3-s0-task-review.md  tasks-p3-s1-fork-foundation.md  (+4 more)
model/: README.md  connections.toml
run-set/: README.md
(+83 files in other folders)
